--- a/neon/search/sass/2-layouts/_search-form.sass
+++ b/neon/search/sass/2-layouts/_search-form.sass
@@ -1,7 +1,15 @@
 /* Search Form Layout ********************/
+
+input[type='checkbox']
+  width: 16px
+  height: 16px
+  vertical-align: baseline !important
+
 // Apagar depois que resolver o lance de expandir
 .material-icons
-  font-size: 18px !important
+  width: 16px
+  height: 16px
+  font-size: 16px !important
   cursor: pointer
 
 .collapsed
@@ -26,11 +34,6 @@
     font-weight: 600
     
 
-//  Adjust body width to Biorepo standards!!!!!!
-// body
-//   max-width: 1024px
-//   margin: 0 auto
-
 #params-form
   display: grid
   grid-template-columns: 3fr 1fr
@@ -52,10 +55,6 @@
   grid-template-columns: 1fr 1fr
   grid-gap: 20px
 
-  input[type='checkbox']
-    width: 16px
-    height: 16px
-    
   ul
     list-style-type: none
     padding-left: 20px
@@ -64,10 +63,6 @@
   display: grid
   grid-template-columns: 1fr 1fr
   grid-gap: 20px
-
-  input[type='checkbox']
-    width: 16px
-    height: 16px
     
   ul
     list-style-type: none
